--- a/jmq-store/pom.xml
+++ b/jmq-store/pom.xml
@@ -14,6 +14,11 @@
 			<artifactId>jmq-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+				<dependency>
+			<groupId>org.jfw.jmq</groupId>
+			<artifactId>jmq-util</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
